# kurs_3

./: .gitignore  README.md  pyproject.toml
func/: class_print_messege.py  func.py  main.py
test/: test.py  testing_file.py
